--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -8,7 +8,8 @@
         </figcaption>
     </figure>
     <div class="description">
-        <p class="{{has_description}}">{{description}}</p>
+        <p class="{{has_description}}">{{description}}<span class="limiter"></span></p>
+        <span class="see_more"></span>
     </div>
 
     <!--
