--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6075,6 +6075,22 @@ button.close {
   background-color: #212121;
   cursor: pointer;
 }
+.cloud-plugins .cloud-plugin:hover .description .see_more {
+  background: -moz-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(33, 33, 33, 0)), color-stop(100%, #212121));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(33, 33, 33, 0) 0%, #212121 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(33, 33, 33, 0) 0%, #212121 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00222222', endColorstr='#222222', GradientType=0);
+  /* IE6-9 */
+}
 .cloud-plugins .cloud-plugin figure {
   position: relative;
   min-height: 1px;
@@ -6146,6 +6162,27 @@ button.close {
 }
 .cloud-plugins .cloud-plugin .description .no_description {
   color: #444;
+}
+.cloud-plugins .cloud-plugin .description .see_more {
+  position: absolute;
+  width: 100%;
+  height: 18px;
+  bottom: 0;
+  z-index: 10;
+  background: -moz-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(17, 17, 17, 0)), color-stop(100%, #111111));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(17, 17, 17, 0) 0%, #111111 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(17, 17, 17, 0) 0%, #111111 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00222222', endColorstr='#222222', GradientType=0);
+  /* IE6-9 */
 }
 .cloud-plugins .cloud-plugin .actions {
   font-size: 11px;
