--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -159,6 +159,11 @@ body {
   top: 0;
 }
 
+hr.dotted {
+  border: 1px dotted #444;
+  margin: 2px 0 3px 0;
+}
+
 #notifications {
   position: absolute;
   top: 0;
