--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -1,5 +1,5 @@
 <div class="js-close plugin-info">
-    <div class="container-fluid box">
+    <div class="container">
         <span class="js-close alignright btn btn-mini btn-danger">Close</span>
         <div class="row-fluid clearfix">
             <div class="span10 offset1 clearfix">
