changing styles for plugin-info window

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -697,10 +697,11 @@ hr.dotted {
   top: 0px;
   z-index: 40;
   .box {
-    background-color: #000;
-    border-radius: 18px;
-    margin: 27px auto;
-    width: 90%;
+    margin-top: 3em;
+    background-color: #111;
+    padding: 15px;
+    border: 2px solid #333;
+    border-radius: 15px;
   }
   .close {
     color: #fff;
