--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6868,10 +6868,11 @@ hr.dotted {
   z-index: 40;
 }
 .plugin-info .box {
-  background-color: #000;
-  border-radius: 18px;
-  margin: 27px auto;
-  width: 90%;
+  margin-top: 3em;
+  background-color: #111;
+  padding: 15px;
+  border: 2px solid #333;
+  border-radius: 15px;
 }
 .plugin-info .close {
   color: #fff;
