--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6893,21 +6893,52 @@ hr.dotted {
   display: inline-block;
   z-index: 0;
 }
-.plugin-info .plugin_desciption {
-  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 1em, #ffffff 2em);
-  background: -webkit-gradient(linear, left top, right top, color-stop(1em, rgba(255, 255, 255, 0)), color-stop(2em, #ffffff));
-  /* background: -webkit-linear-gradient(left, rgba(255,255,255,0) 1em, #fff 2em); */
-  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 1em, #ffffff 2em);
-  background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 1em, #ffffff 2em);
-  /* background: linear-gradient(to right, rgba(255,255,255,0) 1em, #fff 2em); */
+.plugin-info figure {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 992px) {
+  .plugin-info figure {
+    float: left;
+    width: 33.33333333%;
+  }
+}
+.plugin-info figure:hover {
+  z-index: 10 !important;
+}
+.plugin-info .plugin-description {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 100%;
+  display: block;
+  position: a;
+  padding-bottom: 20%;
+  padding-left: 45px;
+  background: -moz-linear-gradient(left, rgba(17, 17, 17, 0) 1em, #111111 2em);
+  background: -webkit-gradient(linear, left top, right top, color-stop(1em, rgba(17, 17, 17, 0)), color-stop(2em, #111111));
+  background: -webkit-linear-gradient(left, rgba(17, 17, 17, 0) 1em, #111111 2em);
+  background: -o-linear-gradient(left, rgba(17, 17, 17, 0) 1em, #111111 2em);
+  background: -ms-linear-gradient(left, rgba(17, 17, 17, 0) 1em, #111111 2em);
+  background: linear-gradient(to right, rgba(17, 17, 17, 0) 1em, #111111 2em);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=1);
+}
+@media (min-width: 992px) {
+  .plugin-info .plugin-description {
+    float: left;
+    width: 58.33333333%;
+  }
 }
 .plugin-info header {
   padding: 18px 0 0;
 }
 .plugin-info header h1 {
   color: #fff;
-  font-size: 21px;
+  font-size: 27px;
+  font-weight: bold;
   line-height: 1;
   margin: 0;
   padding: 0;
