--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -3,11 +3,11 @@
         <span class="js-close alignright btn btn-mini btn-danger">Close</span>
         <div class="row-fluid clearfix">
             <div class="span10 offset1 clearfix">
-                <figure class="col-md-4 screenshot">
+                <figure class="screenshot">
                     <img src="{{screenshot_href}}">
                 </figure>
 
-                <div class="col-md-5 plugin_description">
+                <div class="plugin-description">
                     <header>
                         <h1>{{label}}</h1>
                         <p>{{category.0}}</p>
