styling plugin pop up

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -147,20 +147,20 @@
         }
       }
       .description {
-        .make-sm-column(8);
         .no_description {
           color: #444;
         }
         display: block;
         line-height: 1.5;
         overflow: hidden;
-        max-height: 99px;
+        height: 99px;
         overflow: hidden;        
         .see_more {
           position: absolute;
           width: 100%;
           height: 18px;
           bottom: 0;
+          margin-bottom: 32px;
           z-index: 10;
           @gradient1: rgba(17,17,17,0);
           @gradient2: rgba(17,17,17,1);        
@@ -184,7 +184,7 @@
       .status {
          display: inline-block;
          padding: 1px 4px;
-         margin: 10px 15px;
+         margin-top: 10px;
          text-align: center;
          border-radius: 2px;
          text-transform: uppercase;
