--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -2,14 +2,16 @@
     <figure class="thumb">
         <img src="img/px.gif" style="background: url({{screenshot_href}}) center top no-repeat;">
     </figure>
-    <div class="description">
-        <span class="title">{{label}}</span>
-        <span class="author">{{brand}}</span>        
-        <hr class="dotted" />
-        <p class="{{has_description}}">{{description}}<span class="limiter"></span></p>
-        <span class="see_more"></span>        
+    <div class="col-sm-8">
+        <div class="description">
+            <span class="title">{{label}}</span>
+            <span class="author">{{brand}}</span>        
+            <hr class="dotted" />
+            <p class="{{has_description}}">{{description}}<span class="limiter"></span></p>
+            <span class="see_more"></span>        
+        </div>
+        <span class="status {{status}}"></span> 
     </div>
-    <span class="status {{status}}"></span> 
 
     <!--
     <span class="rating four"></span>
