--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -146,6 +146,11 @@ body {
 * {
   font-family: "cooper hewitt", Sans-serif !important;
 }
+.ui-draggable:active {
+  cursor: -webkit-grabbing !important;
+ }
+
+
 .form-control {
   width: 100% !important;
 }
@@ -505,10 +510,13 @@ hr.dotted {
   }
   #plugins-library-settings-window {
     background: #000;
-    bottom: 167px;
+    bottom: 166px;
     color: #fff;
     position: absolute;
-    right: 0;
+    right: 37px;
+    padding: 5px 0;
+    border-radius: 5px;
+    border-bottom-right-radius: 0;
     h1 {
       font-size: 14px;
       font-weight: bold;
@@ -530,25 +538,29 @@ hr.dotted {
       position: relative;
     }
     .input-clean {
+      &:after {
+        content: "&times;";
+        content: "\00d7";
+        font-size: 13px;
+        font-weight: bold;
+      }
       background: #333;
       border-radius: 12px;
       color: #fff;
       cursor: pointer;
-      font-size: 8px;
       height: 18px;
       left: auto !important;
       position: absolute;
       right: 13px !important;
       text-align: center;
       text-transform: uppercase;
-      top: 31px !important;
+      top: 47px !important;
       width: 18px;
     }
   }
   ul {
-    height: 26px;
     list-style: none;
-    margin: 0 73px 0 0;
+    margin: 6px 73px 0 0;
     overflow: hidden;
     padding: 10px 0 0 0;
     position: relative;
@@ -556,7 +568,7 @@ hr.dotted {
     li {
       background: #1b1b1b;
       color: #fff;
-      cursor: pointer;
+      cursor: pointer !important;
       display: inline-block;
       float: left;
       font-size: 11px;
@@ -610,7 +622,7 @@ hr.dotted {
       position: relative;
     }
     .plugins-wrapper .plugin {
-      color: #fff;
+      color: #fff;      
       float: left;
       font-size: 11px;
       font-weight: bold;
@@ -621,7 +633,11 @@ hr.dotted {
     }
     .plugins-wrapper .plugin .thumb {
       height: 67px;
+      cursor: -webkit-grab !important;
       position: relative;
+      &:active {
+        cursor: -webkit-grabbing !important;
+      }
     }
     .plugins-wrapper .plugin .thumb img {
       height: auto;
@@ -1255,7 +1271,7 @@ hr.dotted {
   .pedalboard {
     border-top: 1px dotted #111;
     color: #fff;
-    cursor: move;
+    cursor: -webkit-grabbing !important;
     padding-top: 10px;
     width: 100%;
     .info {
@@ -1350,7 +1366,7 @@ hr.dotted {
   .pedalboard {
     border-top: 1px dotted #444;
     color: #fff;
-    cursor: move;
+    cursor: -webkit-grabbing !important;
     float: left;
     margin: 10px 2.5% 0;
     padding: 10px 0;
@@ -1502,7 +1518,7 @@ hr.dotted {
 
 .drag-handle {
   bottom: 0;
-  cursor: move;
+  cursor: -webkit-grabbing !important;
   left: 0;
   position: absolute;
   right: 0;
