various css adjustments

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -633,7 +633,7 @@ hr.dotted {
     }
     .plugins-wrapper .plugin .thumb {
       height: 67px;
-      cursor: -webkit-grab !important;
+      cursor: pointer !important;
       position: relative;
       &:active {
         cursor: -webkit-grabbing !important;
@@ -996,7 +996,7 @@ hr.dotted {
     border-style: dotted;
     border-width: 0 1px 0 0;
     bottom: 46px;
-    left: 10px;
+    left: 0;
     padding-top: 18px;
     position: fixed;
     right: 0;
