--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -45,7 +45,7 @@
     border-style: dotted;
     border-width: 0 1px 0 0;
     bottom: 46px;
-    left: 10px;
+    left: 0;
     padding-top: 18px;
     position: fixed;
     top: 0;
@@ -56,7 +56,7 @@
         font-weight: 2em;
         text-transform: uppercase;
         font-weight: bold;
-        margin: 0
+        margin: 0 0 0 10px;
       }
       h2 {
         color: white;
@@ -64,10 +64,12 @@
         text-transform: uppercase;
         font-weight: bold;
         margin-top: 1em;
+        margin-left: 10px;
       }
       .control-group {
         float: left;
         margin-right: 9px;
+        margin-left: 10px
       }
       .control-group label {
         color: #fff;
@@ -77,6 +79,9 @@
       }
       .control-group select {
         width: 50px;
+      }
+      >.form-group {
+        padding: 15px;
       }
       .categories {
         width: 100%;
@@ -90,14 +95,14 @@
           font-size: 12px;
           font-weight: bold;
           margin: 0 0 1px 0;
-          padding: 5px 5px;
+          padding: 5px 15px;
           position: relative;
           span {
             float: right
           }
         }
         li.selected {
-          background: transparent;
+          background: #fff !important;
         }
         li:hover {
           background: #333;
@@ -106,9 +111,10 @@
     }
   }
   .cloud-plugins {
-    left: 252px;    
+    left: 242px;    
     position: absolute;
-    right: 10px;
+    right: 0;
+    background: #111 !important;
     .plugins-wrapper {
     	width: 100%;
     }
@@ -123,6 +129,7 @@
       &:hover {
         background-color: #212121;
         cursor: pointer;
+        border-radius: 5px;
         .description {
           .see_more {         
             @gradient4: #212121;
@@ -160,7 +167,7 @@
           width: 100%;
           height: 18px;
           bottom: 0;
-          margin-bottom: 32px;
+          margin-bottom: 25px;
           z-index: 10;
           @gradient1: rgba(17,17,17,0);
           @gradient2: rgba(17,17,17,1);        
