Misc fixes needed after latest store-social changes

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -9,7 +9,7 @@
 
                 <div class="plugin-description">
                     <header>
-                        <h1>{{label}}</h1>
+                        <h1>{{name}}</h1>
                         <p>{{category}}</p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
