--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -1,4 +1,4 @@
-<div class="plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
+<div class="plugin available-plugin js-available-effect" mod-role="available-plugin">
     <div class="thumb">
         <img src="{{thumbnail_href}}">
     </div>
