Always use comment instead of description

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -7,7 +7,7 @@
             <span class="title">{{label}}</span>
             <span class="author">{{brand}}</span>
             <hr class="dotted" />
-            <p class="{{has_description}}">{{description}}<span class="limiter"></span></p>
+            <p class="{{has_comment}}">{{comment}}<span class="limiter"></span></p>
             <span class="see_more"></span>
         </div>
         <span class="status {{status}}"></span>
